<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mHD app</string>
    <string name="title_section6">Remote Storage</string>
    <string name="title_section5">YouTube Guidelines</string>
    <string name="title_section4">Notifications</string>
    <string name="title_section3">Activity Recognition</string>
    <string name="title_section2">Visualization</string>
    <string name="title_section1">Connectivity</string>
    <string name="title_connected_devices"><b><i>Devices connected</i></b></string>
    <string name="title_confirmation">Confirmation</string>
    <string name="title_configuration">Configuration</string>
    <string name="disconnect_device">Disconnect</string>
    <string name="connect_device">Connect</string>
    <string name="devices">Devices</string>
    <string name="streaming">Streaming</string>
    <string name="device_configuration">Device Configuration</string>
    <string name="connected">Connected</string>
    <string name="button_scan">Scan</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="scanning">Scanning for devices...</string>
    <string name="select_device">Select a wearable health device</string>
     <string name="select_device2">Select device and sensors</string>
    <string name="none_found">No devices found</string>
    <string name="mobile">Device Mobile</string>
    <string name="title_type_devices">Introduce the device\'s name and select the type</string>
    <string name="shimmer">Device Shimmer</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="title_menu_device">Select an option</string>
    <string name="start_streaming">Start streaming</string>
    <string name="stop_streaming">Stop streaming</string>
    <string name="sensors">Sensors</string>
    <string name="configuration">Configuration</string>
    <string name="remove">Remove</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="confirmation">You are about to remove a device. Are you sure?</string>
    <string name="title_sensor_list">List of sensors</string>
    <string name="store_data">Store data</string>
    <string name="toggle_turn_on">On</string>
    <string name="toggle_turn_off">Off</string>
    <string name="calibrated">Calibrated</string>
    <string name="uncalibrated">Uncalibrated</string>
    <string name="format_data">Data type</string>
    <string name="apply_button">Apply configuration</string>
    <string name="sample_rate">Sample rate</string>
    <string name="rate_prompt">Select a sample rate</string>
 	<string name="start">Start</string>
 	<string name="stop">Stop</string>
 	<string name="text_manualY">Y coordinates</string>    
 	<string name="toggle_turn_yes">Yes</string>    
 	<string name="toggle_turn_no">No</string>
 	<string name="viewPort">View Port</string>    
 	<string name="text_max">Max: </string>
 	<string name="text_min">Min: </string>
 	<string name="text_legend">Legend</string>
 	<string name="top">Top</string>
 	<string name="middle">Middle</string>
 	<string name="bottom">Bottom</string>
 	<string name="DescriptionImage">Description of an Image</string>
    <string name="largeText">Large Text</string>
    <string name="smallText">Small Text</string>
 	
 	<string name="standing">Standing still</string>
 	<string name="sitting">Sitting and relaxing</string>
 	<string name="lying">Lying down</string>
 	<string name="walking">Walking</string>
 	<string name="climbing">Climbing stairs</string>
 	<string name="waist">Waist bends forward</string>
 	<string name="frontal">Frontal up/down</string>
 	<string name="knees">Knees bended</string>
 	<string name="cycling">Cycling</string>
 	<string name="jogging">Jogging</string>
 	<string name="running">Running</string>
 	<string name="jump">Jump F&amp;B</string>
 	<string name="noActivity">No activity</string>
 	
 	<string name="startRecognition">Start Recognition</string>
 	<string name="stopRecognition">Stop Recognition</string>
 	<string name="wristString">Right Wrist</string>
 	<string name="ankleString">Left Ankle</string>
 	<string name="chestString">Chest</string>
    <string name="guidelinesTitleString">Videos</string>
    <string name="remoteStorageString">Remote Storage</string>
    
    <string name="feedbacktype1">None</string>  
    <string name="feedbacktype2">Alarm Sound</string>  
    <string name="feedbacktype3">Ringtone Sound</string>  
    <string name="feedbacktype4">Notification Sound</string>   
    <string name="feedbacktype">¿What type of sound?</string>
    <string name="notificationTitle">Notification Title</string>
    <string name="notificationText">Notification Text</string>
    
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>

</resources>