<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:src="@drawable/noactivity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
        	android:gravity="center_vertical|left"
            android:layout_weight="0.2"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/noActivity"
                android:textSize="25sp" />

        </LinearLayout>
        
  	</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:background="@drawable/button_border2" >

            <TextView
                android:id="@+id/chestTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_weight="0.4"
                android:text="@string/chestString"
                android:textColor="@color/Black"
                android:textSize="25sp" />

            <Spinner
                android:id="@+id/chestSpinner"
				android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="0.35"
             />
            
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:background="@drawable/button_border2" >

            <TextView
                android:id="@+id/ankleTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_weight="0.4"
                android:text="@string/ankleString"
                android:textColor="@color/Black"
                android:textSize="25sp" />

            <Spinner
                android:id="@+id/ankleSpinner"
				android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="0.35"
             />
            
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:background="@drawable/button_border2" >

            <TextView
                android:id="@+id/wristTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_weight="0.4"
                android:text="@string/wristString"
                android:textColor="@color/Black"
                android:textSize="25sp" />

           

            <Spinner
                android:id="@+id/wristSpinner"
				android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="0.35"
             />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.15"
        android:gravity="center_vertical|left"
        android:orientation="vertical" >

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_gravity="center"
            android:background="@drawable/start_selector"
            android:text="@string/startRecognition"
            android:textSize="20sp" />

    </LinearLayout>

    </LinearLayout>
    
    </LinearLayout>